# pdfscapel

./: .gitignore  ARCHITECTURE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  web-scrape-example.toml
pdfscalpel/: __init__.py  __main__.py
pdfscalpel/analyze/: __init__.py  advanced_stego.py  anti_forensics.py  encryption.py  form_security.py  graph.py  intelligence.py  malware.py  metadata.py  signatures.py  structure.py  watermark.py
pdfscalpel/cli/: __init__.py  decorators.py  main.py  ui.py  validators.py
pdfscalpel/core/: __init__.py  benchmark.py  config.py  constants.py  crypto.py  dependencies.py  error_handler.py  exceptions.py  http_client.py  image_utils.py  logging.py  parallel.py  patterns.py  pdf_base.py  performance.py  profiling.py  streaming.py
pdfscalpel/extract/: __init__.py  attachments.py  forms.py  hidden.py  images.py  javascript.py  objects.py  revisions.py  streams.py  text.py  web.py
pdfscalpel/generate/: __init__.py  challenges.py  corrupted.py  polyglot.py  steganography.py  watermark.py
pdfscalpel/integrations/: __init__.py  ghostscript.py  hashcat.py  john.py  qpdf.py  tesseract.py
pdfscalpel/mutate/: __init__.py  bookmarks.py  encryption.py  ocr.py  optimize.py  pages.py  redaction.py  watermark.py
pdfscalpel/plugins/: __init__.py  base.py  loader.py
pdfscalpel/plugins/examples/: __init__.py  custom_analyzer.py  pattern_extractor.py  pdf_stats.py
pdfscalpel/solve/: __init__.py  auto_solver.py  ctf_mode.py  flag_hunter.py  password.py  repair.py  stego_solver.py
